--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             scale="1.5 1.5 1.5"></a-entity>
         
         <!-- Imagen personalizada -->
-        <a-marker preset="hiro">
+        <a-marker-camera preset="custom" url="https://rocaves.github.io/pattern-Untitled-1.patt" type="pattern">
             <!-- Modelo personalizado -->
             <a-entity
                 position="0 0 0"
                 scale="1 1 1"
                 gltf-model="https://rocaves.github.io/templo.glb"
             ></a-entity>
-        </a-marker>
+        </a-marker-camera>
 
         <a-entity camera></a-entity>
 
